<resources>
    <string name="app_name">Quiz App</string>
    <string name="Ques1">1. Brass gets discoloured in air because of the presence of which of the following gases in air?</string>
    <string name="Ques2">2. Which of the following metals forms an amalgam with other metals?</string>
    <string name="Ques3">3. Which of the following metals found in free state in nature?</string>
    <string name="Ques4">4. Who was the discoverer of Radium and Polonium?</string>
    <string name="Ques5">5. what is the chemical name of Laughing gas?</string>
    <string name="topic">General Science</string>
    <string name="info">Total Questions: 5</string>
    <string name="start">START</string>


</resources>
