<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.javaquiz.MainActivity"
    android:background="@drawable/quiz">

    <TextView
        android:id="@+id/java_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:text="A Quiz on"
        android:textColor="@color/text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficulty_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/java_text"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:text="@string/topic"
        android:textColor="@color/text"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/total_ques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty_level"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/info"
        android:textColor="@color/text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/back"
        android:fadingEdge="none|horizontal|vertical"
        android:filterTouchesWhenObscured="false"
        android:focusedByDefault="true"
        android:text="@string/start"
        android:textColor="@color/text"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>
